--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "node-sass": "^9.0.0",
     "vue": "^3.3.4",
     "vue3-promise-dialog": "^0.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.69.5",
     "vite": "^4.4.5",
     "vite-plugin-windicss": "^1.9.1",
     "windicss": "^3.5.6"
